<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gui.CadastrarActivity" >

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCadastrar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/Senha" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtSenha"
        android:layout_alignRight="@+id/edtSenha"
        android:ems="10"
        android:text="@string/Email" >

        <requestFocus />
    </EditText>

    <EditText android:id="@+id/edtUsuario" android:layout_width="300dp" android:layout_height="wrap_content" android:layout_above="@+id/edtEmail" android:layout_alignRight="@+id/edtEmail" android:ems="10" android:inputType="textPersonName" android:text="Nome" /><Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Cadastrar" />

    

</RelativeLayout>
