<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/comboCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.46"
        android:orientation="vertical" >

        <SurfaceView
            android:id="@+id/surfaceView1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignBottom="@+id/btnBuscarReceitas"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lblNomeIngrediente"
            android:layout_marginTop="34dp"
            android:text="@string/Quantidade"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtPorcoesReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/edtIngrediente"
            android:ems="10" />

        <Button
            android:id="@+id/btnBuscarReceitas"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="20dp"
            android:text="@string/Adicionar_busca" />

        <ListView
            android:id="@+id/lstIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/surfaceView1" >

        </ListView>

        <EditText
            android:id="@+id/edtIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="17dp"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lblNomeIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtIngrediente"
            android:layout_alignRight="@+id/textView2"
            android:text="@string/Ingrediente"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>